[build-system]
requires = [
    "flit_core >=2,<4",
    "httpx",
    "opencensus-ext-azure",
]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "jupyterhub_opencensus_monitor"
author = "Tom Augspurger"
author-email = "taugspurger@microsoft.com"
classifiers = ["License :: OSI Approved :: MIT License"]